# probabilistic

./: .gitignore  LICENSE  MANIFEST.in  README.md  SPY_191020exp_290920.xlsx  SPY_311022exp_061022.xlsx  dev_requirements.txt  diff_tvr.py  example.ipynb  example_script.py  implied_pdf_from_options_prices.py  pyproject.toml  requirements.txt  setup.py
TVR_alpha/: readme.md
data/: AAPL_currentdateJan262024_callFeb2_currentprice19417_CLEAN.csv  AAPL_currentdateNov14_callMar15_currentprice18480.xlsx  AAPL_currentdateNov14_callMar15_currentprice18480_CLEAN.csv  AAPL_currentdateNov14_callMar15_currentprice18480_CLEAN.xlsx  SPY_currentdateApr132022_callMay20_currentprice44331_CLEAN.csv  SPY_currentdateJan132022_callMay20_currentprice46585_CLEAN.csv  nvidia_date20250128_strikedate20250516_price12144.csv  spy_22_12_30.csv  spy_23_01_06.csv  spy_23_01_13.csv  spy_23_02_03.csv  spy_30_06_23.csv  spy_date20250128_strike20250228_price60444.csv  ussteel_date20250128_strike20251219_price3629.csv
io/: __init__  csv_reader.py  reader.py
oipd/cli/: cli.py  generate_pdf.py  utils.py
oipd/dashboard/: interface.py
oipd/graphics/: matplot.py
oipd/io/: __init__.py  csv_reader.py
probabilistic/cli/: cli.py  csv_runner.py  utils.py
probabilistic/core/: __init__.py  pdf.py  tvr.py
probabilistic/dashboard/: interface.py
probabilistic/graphics/: __init__.py  grapher.py  matplot.py  matplot_grapher.py
probabilistic/io/: csv_reader.py  reader.py
tests/cli/: test_cli.py
tests/io/: test_csv_reader.py
tests/io/resources/: sample.csv
