[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oipd"
version = "0.0.4"
readme = "README.md"
authors = [
  { name="Henry Tian", email="tyrneh@gmail.com" },
  { name="Jannic Holzer", email="jannic.holzer@gmail.com" },
]
license = {text = "MIT"}
description = "Generate probability distributions on the future price of publicly traded securities using options data"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
  "altair==4.2.0",
  "attrs==22.1.0",
  "blinker==1.5",
  "cachetools==5.2.0",
  "certifi==2022.9.24",
  "charset-normalizer==2.1.1",
  "click==8.1.3",
  "click-default-group==1.2.2",
  "commonmark==0.9.1",
  "contourpy==1.0.6",
  "cycler==0.11.0",
  "decorator==5.1.1",
  "entrypoints==0.4",
  "et-xmlfile==1.1.0",
  "exceptiongroup==1.0.4",
  "fonttools==4.38.0",
  "gitdb==4.0.10",
  "GitPython==3.1.29",
  "idna==3.4",
  "importlib-metadata==5.1.0",
  "iniconfig==1.1.1",
  "Jinja2==3.1.2",
  "jsonschema==4.17.3",
  "kiwisolver==1.4.4",
  "MarkupSafe==2.1.1",
  "matplotlib==3.6.2",
  "matplotlib-label-lines==0.5.1",
  "more-itertools==9.0.0",
  "numpy==1.23.4",
  "openpyxl==3.0.10",
  "packaging==21.3",
  "pandas==1.5.3",
  "Pillow==9.3.0",
  "pluggy==1.0.0",
  "polygon-api-client==1.4.0",
  "protobuf==3.20.3",
  "pyarrow==10.0.1",
  "pydeck==0.8.0",
  "Pygments==2.13.0",
  "Pympler==1.0.1",
  "pyparsing==3.0.9",
  "pyrsistent==0.19.2",
  "pytest==7.2.0",
  "pytest-mock==3.10.0",
  "python-dateutil==2.8.2",
  "pytz==2022.6",
  "pytz-deprecation-shim==0.1.0.post0",
  "requests==2.31",
  "rich==12.6.0",
  "scipy==1.9.3",
  "semver==2.13.0",
  "six==1.16.0",
  "smmap==5.0.0",
  "streamlit==1.15.2",
  "toml==0.10.2",
  "tomli==2.0.1",
  "toolz==0.12.0",
  "tornado==6.2",
  "typing_extensions==4.6",
  "tzdata==2022.7",
  "tzlocal==4.2",
  "urllib3==1.26.13",
  "validators==0.20.0",
  "websockets==10.4",
  "zipp==3.11.0",
  "traitlets==5.14.3"
]

[project.urls]
"Homepage" = "https://github.com/tyrneh/options-implied-probability"
"Bug Tracker" = "https://github.com/tyrneh/options-implied-probability/issues"

[project.scripts]
oipd = "oipd.cli:main"

[tool.setuptools.packages.find]
where = ["."]